<resources>
    <string name="app_name">Headi</string>
    <string name="nav_header_title">Headi</string>
    <string name="nav_header_subtitle">Your headache diary</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_pains">Pains</string>
    <string name="menu_diary">Diary</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="new_pains_hint">Enter new pain</string>
    <string name="new_item_added">New item added</string>
    <string name="new_diary_added">New record saved</string>
    <string name="title_diary_save">Save record</string>
    <string name="timer_time">00:00:00</string>
    <string name="timer_start">Start</string>
    <string name="timer_stop">Stop</string>
    <string name="diary_description">Description:</string>
    <string name="button_undo">Undo</string>
    <string name="button_clear">Clear</string>
    <string name="region_left">left</string>
    <string name="region_right">right</string>
    <string name="from">from:</string>
    <string name="to">to:</string>
    <string name="menu_medication">Medication</string>
    <string name="add_button">Add</string>
    <string name="new_medications_hint">Enter new medication</string>
    <string name="diary_medication">Medication:</string>
    <string name="diary_medication_hint">Medication…</string>
    <string name="notification_title">Timer is running…</string>
    <string name="paint_strength">Pain strength:</string>
    <string name="diary_description_hint">Description…</string>
    <string name="diary_strength_text">3 / 10</string>
    <string name="diary_filter_list">Filter list</string>
    <string name="title_diary_filter">Filter list</string>
    <string name="filter_from_hint">From date</string>
    <string name="filter_to_hint">To date</string>
    <string name="remove_filter_button">Remove filters</string>
    <string name="add_new_item_title">Add new item</string>
    <string name="pieces">%1$s pcs of %2$s</string>
    <string name="medication_amount">0</string>
    <string name="menu_stats">Statistics</string>
    <string name="stats_set_date_title">Set date</string>
    <string name="none">none</string>
    <string name="stats_pain_duration_ratio_desc">This graph shows the distribution of pain types in percent during the given period.</string>
    <string name="stats_count_strength_ratio_desc">This graph shows for each pain strength the number that occurred in the indicated time period.</string>
    <string name="stats_duration_over_time_desc">This graph shows the number of headache minutes over the indicated time period.</string>
    <string name="menu_backup_restore">Backup and Restore</string>
    <string name="menu_backup_and_restore">Backup and Restore</string>
    <string name="backup_database">Backup your current database to your device.</string>
    <string name="button_backup">Backup</string>
    <string name="restore_database">Restore a backup of the database stored on your device.</string>
    <string name="button_restore">Restore</string>
    <string name="export_to_csv">Export your database to a CSV file. With this file you can make further analyses. All times are Unix time stamps in milliseconds.</string>
    <string name="button_export">Export</string>
    <string name="backup_complete">Backup completed</string>
    <string name="backup_error">Unable to backup database.</string>
    <string name="export_error">Unable to export database to csv file.</string>
    <string name="restore_complete">Restore Completed</string>
    <string name="restore_error">Unable to restore database.</string>
    <string name="title_restore">Restore Database</string>
    <string name="ask_for_restore_database">Do you want to restore the selected database? The current data will be deleted.</string>
    <string name="menu_about">About</string>
    <string name="app_description">Headi (Headache Diary) is a privacy-friendly app to log your headaches. No data is transferred to any cloud services. All data is stored locally only. Headi also offers a simple analysis of the recorded data. You can also export your logs as a CSV file for further analysis of the data.</string>
    <string name="contact_group">Contact</string>
    <string name="title_email">Email</string>
    <string name="contact_email">headi@mailbox.org</string>
    <string name="contact_github">MrReSc</string>
    <string name="title_github">GitHub</string>
    <string name="title_website">Website</string>
    <string name="contact_website">https://github.com/MrReSc/Headi</string>
    <string name="app_information_group">Application information</string>
    <string name="copy_right">Copyright</string>
    <string name="pain_region">Pain region on the head</string>
    <string name="strength_of_10">%1$s / 10</string>
    <string name="from_to">%1$s - %2$s</string>
    <string name="choose_backup">Choose backup database</string>
    <string name="export_complete">Export completed</string>
    <string name="edit_button">Edit</string>
    <string name="title_edit_item">Edit item</string>
    <string name="filter_from_time_hint">From time</string>
    <string name="filter_to_time_hint">To time</string>
    <string name="new_time_not_valid">Time entered is not valid.</string>
    <string name="item_saved">Item saved.</string>
    <string name="diary_times">Times:</string>
    <string name="pain_na">Pain not available</string>
    <string name="no_data_available">No data available</string>
    <string name="title_no_pain_available">No pain present</string>
    <string name="ask_for_new_pain">Please add at least one new type of pain in the menu "Pains".</string>
    <string name="button_ok">OK</string>
    <string name="timer_graph_description">Trend over the last 14 days</string>
    <string name="diary_export_pdf">Export diary as PDF</string>
    <string name="diary_export_header">Headache diary export: %1$s - %2$s</string>
    <string name="diary_export_footer">Page %1$s / %2$s | Export date: %3$s</string>
    <string name="diary_export_data_no">#%1$s</string>
    <string name="diary_export_data_time_from">from: %1$s</string>
    <string name="diary_export_data_time_to">to: %1$s</string>
    <string name="diary_export_data_duration">duration: %1$s</string>
    <string name="diary_export_data_medication">medication: %1$s</string>
    <string name="diary_export_data_pain_and_strength">pain: %1$s (strength: %2$s)</string>
    <string name="diary_export_data_description">description: %1$s</string>
    <string name="pdf_export_finished">PDF export finished</string>
    <string name="translation_crowdin">https://crowdin.com/project/headi</string>
    <string name="title_translate">Help with translation</string>
    <string name="contribute_group">Contribute</string>
</resources>