<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_menu_timer"
            android:title="@string/menu_timer" />
        <item
            android:id="@+id/nav_pains"
            android:icon="@drawable/ic_menu_pain"
            android:title="@string/menu_pains" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_menu_export"
            android:title="@string/menu_export" />
    </group>
</menu>