<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <Spinner
        android:id="@+id/diary_edit_pain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/paint_strength"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diary_edit_pain" />

    <SeekBar
        android:id="@+id/diary_edit_strength"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:max="10"
        android:paddingStart="5dp"
        android:progress="3"
        app:layout_constraintEnd_toStartOf="@+id/diary_edit_strength_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/diary_edit_strength_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diary_strength_text"
        app:layout_constraintBottom_toBottomOf="@+id/diary_edit_strength"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/diary_times"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diary_edit_strength" />

    <EditText
        android:id="@+id/diary_edit_from_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/filter_from_hint"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/diary_edit_from_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/filter_from_time_hint"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_1"
        app:layout_constraintTop_toTopOf="@+id/diary_edit_from_date" />

    <EditText
        android:id="@+id/diary_edit_to_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/filter_to_hint"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diary_edit_from_date" />

    <EditText
        android:id="@+id/diary_edit_to_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/filter_to_time_hint"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/diary_edit_from_time" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/diary_medication"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diary_edit_to_date" />

    <ImageView
        android:id="@+id/button_decrease"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:src="@drawable/ic_menu_minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:tint="?attr/colorPrimary"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/diary_edit_medication_amount"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/medication_amount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="@+id/button_decrease"
        app:layout_constraintStart_toEndOf="@+id/button_decrease"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/button_increase"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:src="@drawable/ic_menu_plus"
        app:layout_constraintStart_toEndOf="@+id/diary_edit_medication_amount"
        app:layout_constraintTop_toTopOf="@+id/diary_edit_medication_amount"
        app:tint="?attr/colorPrimary"
        tools:ignore="ContentDescription" />

    <Spinner
        android:id="@+id/diary_edit_medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_decrease"
        app:layout_constraintStart_toEndOf="@+id/button_increase"
        app:layout_constraintTop_toTopOf="@+id/button_decrease"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/diary_description"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_decrease" />

    <EditText
        android:id="@+id/diary_edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/diary_description"
        android:hint="@string/diary_description_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences"
        android:scrollHorizontally="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

</androidx.constraintlayout.widget.ConstraintLayout>