<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stats.StatsFragment"
    android:orientation="vertical">

        <TextView
            android:id="@+id/stats_date_from_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Mi. 24. Feb. 2021 - Sa. 27. Feb. 2021"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="HardcodedText" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="?actionBarDivider"
                    android:orientation="vertical">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/stats_pain_duration_ratio"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/stats_pain_duration_ratio_desc" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="?actionBarDivider"
                    android:orientation="vertical">

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/stats_count_strength_ratio"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/stats_count_strength_ratio_desc" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="?actionBarDivider"
                    android:orientation="vertical">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/stats_duration_over_time"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/stats_duration_over_time_desc" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

</LinearLayout>